# orbits

./: LICENSE  README.md  environment.yml  pyproject.toml
notebooks/: Astrofun.ipynb  MorePlanetsTest.ipynb  Plotting_test.ipynb  SimRunTest.ipynb  SunEarthTest.ipynb  example.ipynb
src/orbits/: sim.py  test.py
