[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orbits"
version = "0.0.1"
authors = [
  { name="Gwyneth Lannon", email="glannon@nd.edu" },
  { name="Kevin Lannon", email="klannon@nd.edu" },  
]
description = "Utilities for calculating/simulating orbits"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/TeamLannon/orbits"
"Bug Tracker" = "https://github.com/TeamLannon/orbits/issues"